[package]
name = "forge-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Forge rendering engine"
license = "MIT"
repository = "https://github.com/centrixsystems/forge-sdk-rust"
keywords = ["forge", "pdf", "rendering", "html", "screenshot"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
